# GFG-Beginner-DSA-Sheet

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md
Basic/Check If Circular Linked List/: checkCircularList.cpp
Basic/Count nodes of linked list/: countNodes.cpp
Basic/Delete Alternate Nodes/: deleteAlternates.cpp
Basic/Find n k th node in Linked list/: nkNodeLinkedList.cpp  nkNodeLinkedList.java
Basic/Inorder Traversal/: InorderTraversal.cpp
Basic/Insert a node in a BST/: InsertNodeBST.cpp  InsertNodeBST.java
Basic/Level order Traversal/: LevelorderTraversal.cpp
Basic/Postorder Traversal/: PostorderTraversal.cpp  PostorderTraversel.java
Basic/Preorder Traversal/: PreorderTraversal.cpp  PreorderTraversal.java
Basic/Print Linked List elements/: printList.cpp
Basic/Print first n Fibonacci Numbers/: fibonacci.cpp  fibonacci.java
Basic/Search a node in BST/: SearchNodeBST.cpp  SearchNodeBST.java
Easy/Anagram/: anagram.cpp  anagram.java
Easy/Bitonic Point/: bitonic.cpp  bitonic.java
Easy/Check whether K-th bit is set or not/: KthBit.cpp  KthBit.java
Easy/Delete a Node in Single Linked List/: DeleteNode.cpp  DeleteNode.java
Easy/Detect Loop in linked list/: detectLoop.cpp
Easy/Find minimum and maximum element in an array/: minmax.cpp  minmax.java
Easy/Insertion Sort/: sort.cpp  sort.java
Easy/Intersection of Two Linked Lists/: intersectionTwoList.cpp
Easy/Intersection of two sorted Linked lists/: intersectionTwoSortedList.cpp
Easy/Missing number in array/: missing.cpp  missing.java
Easy/Rotate by 90 degree/: rotate.cpp  (+1 more)
(+16 files in other folders)
